<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/starttracking"
        android:showAsAction="ifRoom"
        android:title="@string/start"/>
    <item
        android:id="@+id/stoptracking"
        android:showAsAction="ifRoom"
        android:title="@string/stop"/>

    <item
        android:id="@+id/choose_date"
        android:showAsAction="never"
        android:title="@string/choose_date">
    </item>

    <item
        android:id="@+id/choose_time"
        android:showAsAction="never"
        android:title="@string/choose_time">
    </item>
    
      <item
        android:id="@+id/other_settings"
        android:showAsAction="never"
        android:title="@string/other_settings">
    </item>
    
        <item
        android:id="@+id/reset_setiings"
        android:showAsAction="never"
        android:title="@string/reset_setting">
    </item>
</menu>